--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,6 @@
 // MEASUREMENTS:
 
-$header-height: 50px;
-$footer-height: 60px;
+$menu-button-width: 4.35rem;
 
 // COLORS:
 
